objects/LBI__ModelFieldMapping__c.object
<CustomObject>
    <fields>
        <fullName>LBI__APIDataType__c</fullName>
        <label>API Data Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__APIDisplayName__c</fullName>
        <label>API Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__APIExternalId__c</fullName>
        <externalId>true</externalId>
        <label>API ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__APIIsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API Is Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__APIName__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Model__c</fullName>
        <label>Lattice Model</label>
        <referenceTo>LBI__Model__c</referenceTo>
        <relationshipLabel>Lattice Model Field Mappings</relationshipLabel>
        <relationshipName>LatticeModelFieldMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__SFDCFieldName__c</fullName>
        <label>SFDC Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__SFDCObjectName__c</fullName>
        <label>SFDC Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lattice Model Field Mapping</label>
    <nameField>
        <displayFormat>MFM-{000000000}</displayFormat>
        <label>Lattice Model Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Model Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>